# OpenID_Connect

./: Cargo.toml  README.md
application/: Cargo.toml
authorization/: Cargo.toml
authorization/src/: lib.rs  main.rs  res_req.rs
authorization/templates/: base.html  index.html  response.html
cli/: Cargo.toml
cli/src/: main.rs
