[workspace]
members = ["cli", "authorization"]
[workspace.package]
authors = ["megumsih <megumish@megumi.sh>"]
categories = []
description = "OpenId Connect Implementation"
documentation = ""
edition = "2021"
exclude = []
homepage = "https://github.com/fruscianteee/OpenID_Connect/README.md"
include = []
keywords = ["openid-connect"]
license = "MIT"
publish = false
readme = "./README.md"
repository = "https://github.com/fruscianteee/OpenID_Connect.git"
rust-version = "1.70"
version = "0.1.0"

[workspace.dependencies]
# concurrency runtime
tokio = { version = "1.28", features = ["rt", "rt-multi-thread", "macros"] }
# concurrency utitlity
futures = "0.3"
# enable concurrency method for Trait
async-trait = "0.1"
# assertion is more pretty
pretty_assertions = "1.3"
# tracing and logging library
serde = { version = "1.0.163", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0.71"
