[package]
name = "authorization"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
pretty_assertions = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { version = "0.6.18", features = ["form"] }
anyhow = { workspace = true }
serde = { workspace = true }
askama = { version = "0.12.0", features = ["with-axum"] }
askama_axum = "0.3.0"
