[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true
pretty_assertions.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = "4.3"
reqwest = { version = "0.11.18", features = ["json"] }
anyhow = { workspace = true }
serde = { workspace = true }
# decode form data
serde_urlencoded = "0.7"
authorization = { path = "../authorization" }
uuid = { workspace = true }
rand = { workspace = true }
